# poe2-weapon

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: publish.yaml
.github/workflows/: publish.yaml
app/: bun.lockb  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/src/: AboutView.vue  App.vue  ClipboardFlowView.vue  CustomTitleBar.vue  HomeView.vue  command.ts  formatter.ts  index.css  main.ts  router.ts  types.ts  vite-env.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json  desktop.json
app/src-tauri/data/: bases.json
app/src-tauri/src/: clipboard_flow.rs  lib.rs  tray_window.rs
app/src/components/: BrowserLink.vue  CustomTitleBar.vue  LatestReleaseLink.vue  OldLink.vue  UpdateAppLink.vue  VDps.vue  VDpsWithRunes.vue  VRune.vue  VRunesWithDps.vue  VWeapon.vue
app/src/components/links/: LatestReleaseLink.vue  Link.tsx  UpdateAppLink.vue  VLink.vue
app/src/composables/: use_tauri_updater.ts
app/src/views/: ClipboardFlowView.vue  HomeView.vue  TrayWindow.vue  UpdateView.vue
appp/: Cargo.toml  Dioxus.toml
appp/src/: app.rs
appp/src-tauri/: Cargo.toml  tauri.conf.json
appp/src-tauri/capabilities/: default.json
appp/src-tauri/src/: lib.rs  main.rs
bump/: package.json  pnpm-lock.yaml
bump/src/: main.ts
crates/parser/: Cargo.toml
crates/parser/src/: bases.rs  lib.rs
crates/parser/tests/: main.rs  tests.rs
crates/parser/tests/fixtures/: 1.yaml  2.yaml  3.yaml  4.yaml  5.yaml  basic_talisman.yaml  trade_site_1.yaml
crates/parser/tests/fixtures/1/: expected.json  input.txt
crates/srape_weapons/: Cargo.toml
crates/weapon/: Cargo.toml
crates/weapon/data/: bases.json
crates/weapon/src/: lib.rs
scrape/: .gitignore  README.md  attack_weapon_bases.json  bases.json  bun.lockb  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
scrape/src/: main.ts  scrap_page.ts  weapon.ts
(+12 files in other folders)
