[package]
name = "appp-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dioxus = { version = "0.6", features = ["web"] }
dioxus-logger = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tauri-wasm = { git = "https://github.com/p1mo/tauri-wasm", features = [
        "event", # for all api bindings
        "plugin-all" # for all plugin bindings. should you do this? no.
] }
futures-core = "0.3.31"
futures-util = "0.3.31"

parser = { path = "../crates/parser" }
weapon = { path = "../crates/weapon" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
