[package]
name = "app"
version.workspace = true
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon", "unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = { version = "0.5.3", features = ["unstable_grab"] }
copypasta = "0.10.1"
# PoE2 copypasta weapons parser
parser = { path = "../../crates/parser" }
weapon = { path = "../../crates/weapon" }
enigo = "0.3.0"
open = "5.3.2"
